src/components/blog.css
html {
  font-size: 62.5%;
  line-height: 3rem;
}

p,
a,
li {
  color: #353535;
}

h3 {
  font-size: 2.4rem;
}

footer {
  color: darkgrey;
  font-size: 2rem;
}

section.row {
  padding: 1rem;
  display: flex;
  justify-content: center;
}

a.site-title {
  color: #d96050;
  text-decoration: none;
  font-size: 2rem;
}

.blog-title {
  font-size: 3rem;
  margin: 1rem 0 1rem 1rem;
  text-align: left;
}

@media only screen and (min-width: 320px) {
  .blog-title {
    margin: 3rem 0 3rem 1rem;
  }
}

.blog-post-content {
  font-size: 2rem;
}

.post-link-wrapper {
  margin-bottom: 2rem;
}

a.post-link {
  font-size: 2rem;
  text-decoration: none;
}

.post-link:hover {
  color: #d96050;
  text-decoration: underline;
}

@media only screen and (min-width: 480px) {
  .row-content {
    padding: 0 10rem;
    max-width: 60rem;
  }
}
@media only screen and (min-width: 768px) {
  .row-content {
    max-width: 80rem;
  }
}

